added slide informations

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -63,7 +63,7 @@ section.products{
     display:flex;
     flex-direction: column;
     align-items: center;
-    height:730px;
+    height:830px;
     background-color:rgb(250,250,250);
     padding: 20px 0;
     .section-header{
@@ -75,7 +75,6 @@ section.products{
         padding-bottom:5px;
         border-bottom: 4px solid #00ccff;
     }
-    padding:30px;
     .container{
         display:flex;
         flex-direction: row;
@@ -86,6 +85,7 @@ section.products{
             align-items: center;
             justify-content: center;
             margin:20px;
+            width:25%;
             .image{
                 width:200px;
                 height:200px;
@@ -103,6 +103,8 @@ section.products{
             }
             p{
                 font-size:12px;
+                text-indent: 20px;
+                text-align: justify;
             }
             span{
                 display:block;
@@ -111,7 +113,7 @@ section.products{
                 font-size:10px;
                 padding:10px 20px;
                 color:rgba(100,100,100,.5);
-                margin-top:10px;
+                margin-top:30px;
                 cursor: pointer;
                 transition: all .3s;
 
@@ -136,8 +138,27 @@ section.slider{
         width:100vw;
         height:80vh;
         li{
+            color:white;
+            position: relative;
+            width:100vw;
+            height:80vh;
             img{
                 width:100vw;
+            }
+            h3{
+                font-family: 'Oswald', sans-serif;
+                font-size:45px;
+                position: absolute;
+                top:55%;
+                right:150px;
+            }
+            p{
+                position: absolute;
+                top:68%;
+                right:150px;
+                width:600px;
+                font-weight: 300;
+                text-align: justify;
             }
         }
     }
