--- a/scss/main.scss
+++ b/scss/main.scss
@@ -49,13 +49,13 @@ header.paralax{
     flex-direction: column;
     align-items:center;
     justify-content: center;
-    height:40vh;
+    height:60vh;
     background-image: url("../images/img_6.jpg");
     background-repeat: no-repeat;
     background-size: 100%;
-    background-position-y: -320px;
+    background-position-y: -250px;
     img{
-        width:15vw;
+        width:20vw;
     }
 }
 
@@ -303,5 +303,117 @@ section.banner{
         font-size: 19px;
         text-align: center;
         color:white;
+    }
+}
+
+section.contact{
+    position: relative;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    height:680px;
+    background-color:rgb(250,250,250);
+    padding: 20px 0;
+    .section-header{
+        margin-top:45px;
+        margin-bottom:45px;
+        font-family: 'Oswald', sans-serif;
+        color:rgb(100,100,100);
+        font-size:35px;
+        padding-bottom:5px;
+        border-bottom: 4px solid #00ccff;
+    }
+    div.contact-form{
+        display:flex;
+        align-items: center;
+        justify-content: center;
+        form{
+            display:flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-between;
+            height:450px;
+            input{
+                margin-bottom:10px;
+                width:400px;
+                height:50px;
+                padding:14px;
+                outline: none;
+                &::placeholder{
+                    color:rgba(100,100,100,.4);
+                }
+            }
+            textarea{
+                margin:10px;
+                width:400px;
+                height:250px;
+                padding:14px;
+                outline: none;
+                scale: none;
+                border:1px solid lightgray; 
+                resize: none;
+                &::placeholder{
+                    color:rgba(100,100,100,.4);
+                }
+            }
+            span{
+                display:block;
+                background-color: rgba(100,100,100,.03);
+                border:1px solid rgba(100,100,100,.2);
+                font-size:10px;
+                padding:10px 20px;
+                color:rgba(100,100,100,.5);
+                margin-top:10px;
+                cursor: pointer;
+                transition: all .3s;
+    
+                &:hover{
+                    background-color:rgba(100,100,100,.1);
+                }
+            }
+        }
+    }
+}
+footer{
+    background-color:rgb(25,25,25);
+    height:200px;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    .container{
+        display:flex;
+        flex-direction: row;
+        justify-content: space-between;
+        color:rgba(255,255,255,.6);
+        font-size:20px;
+        .logo{
+            font-family: 'Oswald', sans-serif;
+            span{
+                font-family: 'Oswald', sans-serif;
+            }
+        }
+        .menu{
+            display: inline-block;
+            li{
+                display: inline-block;
+                cursor: pointer;
+                margin-left:20px;
+                transition: color .3s;
+                img{
+                    width:40px;
+                    height:40px;
+                    transition: all .3s;
+                    &:hover{
+                        transform: scale(1.2);
+                    }
+                }
+            }
+        }
+    }
+    .container:last-child{
+        color:rgba(255,255,255,.4);
+        margin:5px;
+        font-size:12px;
     }
 }
