fixing media queries

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -837,7 +837,7 @@
 
 }
 
-@media screen and (max-width: 1004px){
+@media screen and (max-width: 1004px){//min920
     .container{
         width:800px;
         margin:0 auto;
@@ -1253,7 +1253,7 @@
     }
 }
 
-@media screen and (max-width: 920px){
+@media screen and (max-width: 920px){//min 850
     .container{
         width:800px;
         margin:0 auto;
